--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,18 @@
-name: Build and Check
+name: Build
 on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - main
+  workflow_call:
 jobs:
-  build:
-    name: Build
-    uses: Logius-standaarden/Automatisering/.github/workflows/build.yml@snapshot-in-repo
-  check:
-    needs: build
-    name: Check
-    uses: Logius-standaarden/Automatisering/.github/workflows/check.yml@main    
-  publish:
-    needs: build
-    name: Publish (Logius)
-    uses: Logius-standaarden/Automatisering/.github/workflows/publish.yml@main
-    secrets: inherit
+  main:
+    name: HTML
+    runs-on: ubuntu-22.04
+    steps:
+      - run: mkdir ~/static
+      - name: Cache HTML
+        uses: actions/cache@v3
+        with:
+          path: ~/static
+          key: ${{ github.run_id }}
+      - uses: actions/checkout@v3
+      - name: Static HTML
+        run: |
+          npx respec --localhost --src index.html --out ~/static/snapshot.html
