--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ on:
       - develop
       - githubactions-moves
   pull_request:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -16,6 +18,6 @@ jobs:
     uses: ./.github/workflows/check.yml
 
   publish:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     needs: check
     uses: ./.github/workflows/publish.yml
