--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,16 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-22.04
-    if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+    if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
+
       - name: Recover HTML
         uses: actions/cache@v4
         with:
           path: ~/static
           key: ${{ github.run_id }}
+
       - name: Gather files
         run: |
           rm -f *.md *.html
@@ -22,24 +24,14 @@ jobs:
           mkdir content
           shopt -s extglob
           mv !(content) content
-      - name: Commit release
+
+      - name: Push to docs.geostandaarden.nl
         run: |
-          git add -A
+          git clone https://github.com/Geonovum/docs.geostandaarden.nl.git docs-repo
+          cd docs-repo
           git config user.name "GitHub Action"
           git config user.email "deploy-bot@geonovum.nl"
-          git diff-index --quiet HEAD || git commit -m "Automated Release"
+          cp -r ../index.html ../content .
+          git add -A
+          git commit -m "Automated Release from $GITHUB_REPOSITORY"
           git push
-
-  deploy:
-    name: Deploy to GitHub Pages
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-    runs-on: ubuntu-22.04
-    needs: release
-    steps:
-      - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v4
