--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,17 +3,42 @@ on:
   workflow_call:
 jobs:
   main:
-    name: HTML
+    name: Snapshot
     runs-on: ubuntu-22.04
-    container: node:20-bookworm
     steps:
       - run: mkdir ~/static
-      - name: Cache HTML
-        uses: actions/cache@v3
+      - name: Create cache
+        uses: actions/cache@v4
         with:
           path: ~/static
           key: ${{ github.run_id }}
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Static HTML
         run: |
           npx respec --localhost --src index.html --out ~/static/snapshot.html
+      - name: Check config
+        id: config
+        if: ${{ github.event_name == 'push'}}
+        run: |
+          echo "grep=false" >> $GITHUB_OUTPUT
+          if grep -q alternateFormats ./js/config.js; then
+          echo "grep=true" >> $GITHUB_OUTPUT
+          fi
+      - name: Copy pdf.js
+        if: ${{ steps.config.outputs.grep == 'true' }}
+        run: |
+          cp .github/workflows/pdf.js .
+
+      - name: PDF
+        if: ${{ steps.config.outputs.grep == 'true' }}
+        run: |
+          cp ./js/config.js config.js
+          echo "module.exports = { respecConfig };" >> config.js
+          echo "var window = {respecMermaid : {createFigures : null}};" | cat - config.js > temp && mv temp config.js
+          cp ~/static/snapshot.html snapshot.html
+          npm i puppeteer
+          python3 -m http.server 8080 &
+          rm -f *.pdf
+          node pdf.js      
+          find *.pdf
+          mv *.pdf ~/static/
