--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Push to docs.geostandaarden.nl
         run: |
-          git clone https://github.com/Geonovum/docs.geostandaarden.nl.git docs-repo
+          git clone https://x-access-token:${{ secrets.GH_PUSH_TOKEN }}@github.com/Geonovum/docs.geostandaarden.nl.git docs-repo
           cd docs-repo
           git config user.name "GitHub Action"
           git config user.email "deploy-bot@geonovum.nl"
