--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ on:
       - main
       - develop
       - githubactions-moves
-  pull_request:
-  release:
-    types: [published]
+#  pull_request:
+#  release:
+#    types: [published]
 
 jobs:
   build:
