--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
     uses: ./.github/workflows/check.yml
 
   publish:
-    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
+#    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
     needs: check
     uses: ./.github/workflows/publish.yml
