--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-22.04
+    environment: production
 #    if: github.event_name == 'release'
     steps:
       - uses: actions/checkout@v4
