--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,14 +30,12 @@ jobs:
           mkdir content
           shopt -s extglob
           mv !(content) content
-      - name: Debug secret beschikbaarheid
-        run: |
-          if [ -z "${{ secrets.GH_PUSH_TOKEN }}" ]; then
-            echo "❌ GH_PUSH_TOKEN is NIET beschikbaar in deze workflow!"
-            exit 1
-          else
-            echo "✅ GH_PUSH_TOKEN is correct geladen."
-          fi
+      - uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
+        with:
+          repository_owner: Geonovum
+          repository_name: Geonovum/docs.geostandaarden.nl
+          new_branch_name: testbranch
+          access_token: ${{ secrets.GH_PUSH_TOKEN}}
 
       - name: Create branch and PR in docs repo
         env:
