--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
         with:
           repository_owner: Geonovum
-          repository_name: Geonovum/docs.geostandaarden.nl
+          repository_name: docs.geostandaarden.nl
           new_branch_name: testbranch
           access_token: ${{ secrets.GH_PUSH_TOKEN}}
 
