--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,16 +30,7 @@ jobs:
           mkdir content
           shopt -s extglob
           mv !(content) content
-      - uses: GuillaumeFalourd/create-other-repo-branch-action@v1.5
-        with:
-          repository_owner: Geonovum
-          repository_name: docs.geostandaarden.nl
-          new_branch_name: testbranch
-          access_token: ${{ secrets.GH_PUSH_TOKEN}}
-
       - name: Create branch and PR in docs repo
-        env:
-          GH_PUSH_TOKEN: ${{ secrets.GH_PUSH_TOKEN }}
         run: |
           # Config
           REPO="Geonovum/docs.geostandaarden.nl"
@@ -48,7 +39,7 @@ jobs:
           COMMIT_MSG="Automated update from $GITHUB_REPOSITORY"
           
           # Clone repo
-          git clone https://x-access-token:${{ env.GH_PUSH_TOKEN }}@github.com/$REPO.git $TARGET_DIR
+          git clone https://x-access-token:${{ secrets.GH_PUSH_TOKEN }}@github.com/$REPO.git $TARGET_DIR
           cd $TARGET_DIR
 
           # Maak branch
