--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,8 @@ jobs:
           BRANCH="auto-update-$(date +'%Y%m%d%H%M%S')"
           TARGET_DIR="docs-repo"
           COMMIT_MSG="Automated update from $GITHUB_REPOSITORY"
-          echo $super_secret
+          
+          echo ${{env.super_secret}}
           # Clone repo
           git clone https://x-access-token:${{ env.super_secret }}@github.com/$REPO.git $TARGET_DIR
           cd $TARGET_DIR
