--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,6 @@ jobs:
           shopt -s extglob
           mv !(content) content
       - name: Create branch and PR in docs repo
-        env:
-          super_secret: ${{ env.TEST_DATA }}
         run: |
           # Config
           REPO="Geonovum/docs.geostandaarden.nl"
@@ -40,9 +38,8 @@ jobs:
           TARGET_DIR="docs-repo"
           COMMIT_MSG="Automated update from $GITHUB_REPOSITORY"
           
-          echo ${{ env.super_secret }}
           # Clone repo
-          git clone https://x-access-token:${{ env.super_secret }}@github.com/$REPO.git $TARGET_DIR
+          git clone https://x-access-token:${{ env.TEST_DATA }}@github.com/$REPO.git $TARGET_DIR
           cd $TARGET_DIR
 
           # Maak branch
