--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,10 +38,8 @@ jobs:
           repository: 'docs.geostandaarden.nl'
           access-token: ${{ secrets.GH_PUSH_TOKEN }}
       - name: Create branch and PR
-        env:
-          GH_TOKEN: ${{ secrets.GH_PUSH_TOKEN }}
         run: |
-          cd docs-repo
+          cd docs.geostandaarden.nl
 
           BRANCH="auto-update-$(date +'%Y%m%d%H%M%S')"
           COMMIT_MSG="Automated update from $GITHUB_REPOSITORY"
